packages/pyhunt/pyhunt-1.2.0.tar.gz/pyhunt-1.2.0/examples/outputs/error_example.txt
[38;2;185;233;124m├─▶[0m [38;2;185;233;124m1[0m 🟢 Entry [1m[38;2;185;233;124mlevel_one[0m | [1m[38;2;185;233;124mexamples/error_example.py:23[0m
[38;2;185;233;124m│    [0m [38;2;185;233;124m{[0m
[38;2;185;233;124m│    [0m   [38;2;185;233;124m  "value": 5[0m
[38;2;185;233;124m│    [0m [38;2;185;233;124m}[0m
[38;2;185;233;124m│   [0m  [38;2;185;233;124m1[0m [36mINFO[0m Inside level_one, calling level_two.
[38;2;185;233;124m│   [0m [38;2;240;230;168m├─▶[0m [38;2;240;230;168m2[0m 🟢 Entry [1m[38;2;240;230;168mlevel_two[0m | [1m[38;2;240;230;168mexamples/error_example.py:17[0m
[38;2;185;233;124m│   [0m [38;2;240;230;168m│    [0m [38;2;240;230;168m{[0m
[38;2;185;233;124m│   [0m [38;2;240;230;168m│    [0m   [38;2;240;230;168m  "value": 4[0m
[38;2;185;233;124m│   [0m [38;2;240;230;168m│    [0m [38;2;240;230;168m}[0m
[38;2;185;233;124m│   [0m [38;2;240;230;168m│   [0m  [38;2;240;230;168m2[0m [36mINFO[0m Inside level_two, calling level_three.
[38;2;185;233;124m│   [0m [38;2;240;230;168m│   [0m [38;2;253;187;111m├─▶[0m [38;2;253;187;111m3[0m 🟢 Entry [1m[38;2;253;187;111mlevel_three[0m | [1m[38;2;253;187;111mexamples/error_example.py:5[0m
[38;2;185;233;124m│   [0m [38;2;240;230;168m│   [0m [38;2;253;187;111m│    [0m [38;2;253;187;111m{[0m
[38;2;185;233;124m│   [0m [38;2;240;230;168m│   [0m [38;2;253;187;111m│    [0m   [38;2;253;187;111m  "value": 3[0m
[38;2;185;233;124m│   [0m [38;2;240;230;168m│   [0m [38;2;253;187;111m│    [0m [38;2;253;187;111m}[0m
[38;2;185;233;124m│   [0m [38;2;240;230;168m│   [0m [38;2;253;187;111m│   [0m  [38;2;253;187;111m3[0m [36mINFO[0m Inside level_three, about to raise TypeError.
[38;2;185;233;124m│   [0m [38;2;240;230;168m│   [0m [38;2;253;187;111m└──[0m [38;2;253;187;111m3[0m 🟥 Error  [1m[38;2;253;187;111mlevel_three[0m | [1m[38;2;253;187;111mexamples/error_example.py:13[0m
[38;2;185;233;124m│   [0m [38;2;240;230;168m│   [0m [38;2;253;187;111m│    [0m [1m[38;2;227;38;54mTypeError: can only concatenate str (not "int") to str[0m
[38;2;185;233;124m│   [0m [38;2;240;230;168m│   [0m [38;2;253;187;111m│    [0m [38;2;253;187;111m{[0m
[38;2;185;233;124m│   [0m [38;2;240;230;168m│   [0m [38;2;253;187;111m│    [0m   [38;2;253;187;111m  "value": 3[0m
[38;2;185;233;124m│   [0m [38;2;240;230;168m│   [0m [38;2;253;187;111m│    [0m [38;2;253;187;111m}[0m
Traceback (most recent call last):
  File "C:\Projects\Public\pyhunt\examples\error_example.py", line 10, in level_three
    result = "number: " + value
             ~~~~~~~~~~~^~~~~~~
TypeError: can only concatenate str (not "int") to str
